--- a/src/components/views/research/style.scss
+++ b/src/components/views/research/style.scss
@@ -67,13 +67,13 @@
 }
 
 .tab__wrapper{
-  // flex: 1 1 auto;
-  // overflow-y: auto;
-  // height: 0px;
+  flex: 1 1 auto;
+  overflow-y: auto;
+  height: 0px;
   // padding: 1rem;
   padding-left: 14px;
   padding-right: 14px;
-  height: 100%;
+  // height: 100%;
 }
 
 .cardHeader {
